// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`eslint with options should return a config for { target: 'Browser' } 1`] = `
Object {
  "extends": Array [
    "airbnb-base",
    "plugin:jest/recommended",
    "plugin:prettier/recommended",
  ],
  "globals": Object {
    "__DEV__": true,
    "__PRODUCTION__": true,
    "__TEST__": true,
  },
  "overrides": Array [
    Object {
      "env": Object {
        "cypress/globals": true,
        "jest/globals": true,
      },
      "files": Array [
        "**/*spec.js",
        "e2e/**/*.js",
      ],
      "globals": Object {
        "axe": true,
        "create": true,
        "mount": true,
        "render": true,
        "renderToHtml": true,
        "shallow": true,
      },
      "rules": Object {
        "max-len": Array [
          "error",
          Object {
            "code": 80,
            "ignoreComments": true,
            "ignorePattern": "^\\\\s*it(?:\\\\.(?:skip|only))?\\\\(",
            "ignoreUrls": true,
            "tabWidth": 2,
          },
        ],
      },
    },
    Object {
      "files": Array [
        "*.config.js",
        ".*rc.js",
      ],
      "rules": Object {
        "import/no-extraneous-dependencies": Array [
          "error",
          Object {
            "devDependencies": true,
          },
        ],
      },
    },
  ],
  "parser": "babel-eslint",
  "parserOptions": Object {
    "allowImportExportEverywhere": true,
    "ecmaFeatures": Object {
      "ecmaVersion": 2017,
      "impliedStrict": true,
    },
  },
  "plugins": Array [
    "prettier",
    "jest",
    "cypress",
    "notice",
  ],
  "rules": Object {
    "curly": Array [
      "error",
      "all",
    ],
    "max-len": Array [
      "error",
      Object {
        "code": 80,
        "ignoreComments": true,
        "ignoreUrls": true,
        "tabWidth": 2,
      },
    ],
    "no-underscore-dangle": Array [
      "error",
      Object {
        "allow": Array [
          "__DEV__",
          "__PRODUCTION__",
          "__TEST__",
        ],
      },
    ],
    "no-use-before-define": Array [
      "error",
      Object {
        "functions": false,
      },
    ],
    "notice/notice": Array [
      "error",
      Object {
        "onNonMatchingHeader": "report",
        "template": "/**
 * Copyright <%= YEAR %>, <%= NAME %>
 * Licensed under the Apache License, Version 2.0 (the \\"License\\");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an \\"AS IS\\" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

",
        "templateVars": Object {
          "NAME": "SumUp Ltd.",
        },
        "varRegexps": Object {
          "NAME": /SumUp Ltd\\\\\\./,
        },
      },
    ],
  },
}
`;

exports[`eslint with options should return a config for { target: 'Node' } 1`] = `
Object {
  "env": Object {
    "node": true,
  },
  "extends": Array [
    "airbnb-base",
    "plugin:jest/recommended",
    "plugin:prettier/recommended",
  ],
  "globals": Object {
    "__DEV__": true,
    "__PRODUCTION__": true,
    "__TEST__": true,
  },
  "overrides": Array [
    Object {
      "env": Object {
        "cypress/globals": true,
        "jest/globals": true,
      },
      "files": Array [
        "**/*spec.js",
        "e2e/**/*.js",
      ],
      "globals": Object {
        "axe": true,
        "create": true,
        "mount": true,
        "render": true,
        "renderToHtml": true,
        "shallow": true,
      },
      "rules": Object {
        "max-len": Array [
          "error",
          Object {
            "code": 80,
            "ignoreComments": true,
            "ignorePattern": "^\\\\s*it(?:\\\\.(?:skip|only))?\\\\(",
            "ignoreUrls": true,
            "tabWidth": 2,
          },
        ],
      },
    },
    Object {
      "files": Array [
        "*.config.js",
        ".*rc.js",
      ],
      "rules": Object {
        "import/no-extraneous-dependencies": Array [
          "error",
          Object {
            "devDependencies": true,
          },
        ],
      },
    },
  ],
  "parser": "babel-eslint",
  "parserOptions": Object {
    "allowImportExportEverywhere": true,
    "ecmaFeatures": Object {
      "ecmaVersion": 2017,
      "impliedStrict": true,
    },
  },
  "plugins": Array [
    "prettier",
    "jest",
    "cypress",
    "notice",
  ],
  "rules": Object {
    "curly": Array [
      "error",
      "all",
    ],
    "max-len": Array [
      "error",
      Object {
        "code": 80,
        "ignoreComments": true,
        "ignoreUrls": true,
        "tabWidth": 2,
      },
    ],
    "no-underscore-dangle": Array [
      "error",
      Object {
        "allow": Array [
          "__DEV__",
          "__PRODUCTION__",
          "__TEST__",
        ],
      },
    ],
    "no-use-before-define": Array [
      "error",
      Object {
        "functions": false,
      },
    ],
    "notice/notice": Array [
      "error",
      Object {
        "onNonMatchingHeader": "report",
        "template": "/**
 * Copyright <%= YEAR %>, <%= NAME %>
 * Licensed under the Apache License, Version 2.0 (the \\"License\\");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an \\"AS IS\\" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

",
        "templateVars": Object {
          "NAME": "SumUp Ltd.",
        },
        "varRegexps": Object {
          "NAME": /SumUp Ltd\\\\\\./,
        },
      },
    ],
  },
}
`;

exports[`eslint with options should return a config for { target: 'React' } 1`] = `
Object {
  "env": Object {
    "browser": true,
  },
  "extends": Array [
    "airbnb-base",
    "plugin:react/recommended",
    "plugin:jsx-a11y/recommended",
    "plugin:prettier/recommended",
    "prettier/react",
  ],
  "globals": Object {
    "__DEV__": true,
    "__PRODUCTION__": true,
    "__TEST__": true,
  },
  "overrides": Array [
    Object {
      "env": Object {
        "cypress/globals": true,
        "jest/globals": true,
      },
      "files": Array [
        "**/*spec.js",
        "e2e/**/*.js",
      ],
      "globals": Object {
        "axe": true,
        "create": true,
        "mount": true,
        "render": true,
        "renderToHtml": true,
        "shallow": true,
      },
      "rules": Object {
        "max-len": Array [
          "error",
          Object {
            "code": 80,
            "ignoreComments": true,
            "ignorePattern": "^\\\\s*it(?:\\\\.(?:skip|only))?\\\\(",
            "ignoreUrls": true,
            "tabWidth": 2,
          },
        ],
      },
    },
    Object {
      "files": Array [
        "*.config.js",
        ".*rc.js",
      ],
      "rules": Object {
        "import/no-extraneous-dependencies": Array [
          "error",
          Object {
            "devDependencies": true,
          },
        ],
      },
    },
  ],
  "parser": "babel-eslint",
  "parserOptions": Object {
    "allowImportExportEverywhere": true,
    "ecmaFeatures": Object {
      "ecmaVersion": 2017,
      "impliedStrict": true,
      "jsx": true,
    },
  },
  "plugins": Array [
    "prettier",
    "jest",
    "cypress",
    "notice",
    "react",
    "react-hooks",
    "jsx-a11y",
    "emotion",
  ],
  "rules": Object {
    "curly": Array [
      "error",
      "all",
    ],
    "emotion/import-from-emotion": "error",
    "emotion/jsx-import": "error",
    "emotion/no-vanilla": "error",
    "emotion/styled-import": "error",
    "import/no-extraneous-dependencies": Array [
      "error",
      Object {
        "devDependencies": true,
      },
    ],
    "max-len": Array [
      "error",
      Object {
        "code": 80,
        "ignoreComments": true,
        "ignoreUrls": true,
        "tabWidth": 2,
      },
    ],
    "no-underscore-dangle": Array [
      "error",
      Object {
        "allow": Array [
          "__DEV__",
          "__PRODUCTION__",
          "__TEST__",
        ],
      },
    ],
    "no-use-before-define": Array [
      "error",
      Object {
        "functions": false,
      },
    ],
    "notice/notice": Array [
      "error",
      Object {
        "onNonMatchingHeader": "report",
        "template": "/**
 * Copyright <%= YEAR %>, <%= NAME %>
 * Licensed under the Apache License, Version 2.0 (the \\"License\\");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an \\"AS IS\\" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

",
        "templateVars": Object {
          "NAME": "SumUp Ltd.",
        },
        "varRegexps": Object {
          "NAME": /SumUp Ltd\\\\\\./,
        },
      },
    ],
    "react-hooks/exhaustive-deps": "warn",
    "react-hooks/rules-of-hooks": "error",
  },
}
`;
